Defined the arithmetic expression with with symbolic constructors to make it more readable. I also defined a customized show instance and an eval function that can evaluate an expression and gives an Either type result in case the expression is invalid and an error has to be returned to the user

--- a/math-evaluator-haskell.cabal
+++ b/math-evaluator-haskell.cabal
@@ -71,7 +71,7 @@ executable math-evaluator-haskell
     -- build-depends:    base ^>=4.17.2.1
     build-depends:       base >= 4.14 && < 5
     -- Directories containing source files.
-    hs-source-dirs:   app
+    hs-source-dirs:   app, src
 
     -- Base language which the package is written in.
     default-language: Haskell2010
